add boostrap to modified mblog

--- a/templates/header.html
+++ b/templates/header.html
@@ -1,1 +1,5 @@
-<h1>欢迎光临</h1>
+{% load staticfiles %}
+<div class="well">
+    <h1><img src="{% static 'images/logo.jpg' %}" width="100px">欢迎光临</h1>
+</div>
+
