--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,26 @@
 {% extends 'base.html' %}
 {% block title %} 欢迎观看 {% endblock %}
 {% block headmessage %}
-    <h3>目录</h3>
+<h3>目录</h3>
 {% endblock %}
 
 {% block content %}
-    {% for post in posts %}
+{% for post in posts %}
+<div class="panel panel-default">
+    <div class="panel-heading">
         <a href="/post/{{post.slug}}">{{post.title}}</a>
-        <br>
-    {% endfor %}
+    </div>
+<div class="panel-body">
+    <p>
+        {{post.body | truncatechars:8}}
+    </p>
+</div>
+<div class="panel-footer">
+    <p>
+        发布时间：{{ post.pub_date | date:"Y M D, h:m:s" }}
+    </p>
+</div>
+</div>
+<br>
+{% endfor %}
 {% endblock %}
